--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="min-h-full flex flex-col flex-grow">
 
 <head>
   <meta charset="UTF-8" />
@@ -12,8 +12,8 @@
   <title>Agile Poker</title>
 </head>
 
-<body>
-  <div id="root"></div>
+<body class="flex flex-col flex-grow">
+  <div id="root" class="flex flex-col flex-grow"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
